# mkxp-z

./: Dockerfile  README.md  meson.build  meson_options.txt  mkxp.json
.github/workflows/: autobuild.yml
binding/: audio-binding.cpp  binding-mri.cpp  binding-util.h  bitmap-binding.cpp  disposable-binding.h  input-binding.cpp  tilemap-binding.cpp
linux/: Makefile  target-arm64.sh  target-armv6.sh  target-armv7-neon.sh  target-armv7.sh  target-power8le.sh  target-power9le.sh  target-riscv64.sh  target-s390x.sh
macos/Dependencies/: common.make
macos/mkxp-z.xcodeproj/: project.pbxproj
macos/views/: SettingsMenuController.mm  settingsmenu.xib
scripts/preload/: kgl2_wrap.rb
shader/: invert.frag  kglCompressAlpha.frag  kglShadowH.frag  kglShadowV.frag  kglShadowW.frag  kglSubtract.frag  meson.build
src/: config.cpp  config.h  eventthread.cpp  eventthread.h  main.cpp  meson.build  settingsmenu.cpp
src/audio/: al-util.h  audio.cpp  audio.h  audiostream.cpp  audiostream.h  sharedmidistate.h  soundemitter.cpp  soundemitter.h
src/display/: autotiles.cpp  autotilesvx.cpp  bitmap.cpp  bitmap.h  font.cpp  graphics.cpp  graphics.h  sprite.cpp  tilemap.cpp  tilemap.h  window.cpp  windowvx.cpp
src/display/gl/: gl-fun.cpp  gl-fun.h  shader.cpp  shader.h  tileatlasvx.cpp  transform.h
src/input/: input.cpp  input.h  keybindings.cpp
src/util/: encoding.h
subprojects/: .gitignore  angle-compression-utils.wrap  angle.wrap  spirv-headers.wrap  spirv-tools.wrap  volk.wrap  vulkan-headers.wrap  vulkan-memory-allocator.wrap  xxhash.wrap
subprojects/common/: embedtool.py  install-directory.py  meson.build  quotetool.py  sonametool.py
subprojects/packagefiles/: angle-bsd.patch  angle-d3d11-cache.patch  angle-framebuffer-assert.patch  angle-interm-node.patch  angle-round-to-nearest.patch  angle-vulkan-memory-allocator.patch  angle-window-surface-vk-mac.patch  end-of-diff-files.patch
subprojects/packagefiles/angle/: ANGLEShaderProgramVersion.h.in  angle_commit.h.in  meson.build  meson_options.txt  mkxp-angle-egl-shim.cpp  mkxp-angle-wayland-client-shim.cpp  mkxp-angle-x11-shim.cpp  mkxp-angle-xcb-shim.cpp
subprojects/packagefiles/angle-compression-utils/: meson.build
subprojects/packagefiles/spirv-headers/: meson.build
subprojects/packagefiles/volk/: meson.build
subprojects/packagefiles/vulkan-headers/: meson.build
subprojects/packagefiles/vulkan-memory-allocator/: meson.build
subprojects/packagefiles/xxhash/: meson.build
tests/kgl2/: blank.rb  clear-framebuffer.rb  clear.rb  clone.rb  compress-alpha.rb  invert.rb  light.rb  shadow.rb
tests/mega-bitmap/: mega-bitmap-test.rb
tests/sprite-waves/: waves.rb
tests/text/: draw-text-postload-test.rb  draw-text-test.rb
windows/: Makefile  remove-libgomp.py
