option('mri_version', type: 'string', value: '3.1', description: 'Version of MRI to link with')
option('mri_includes', type: 'string', value: '', description: 'Ruby manual include path')
option('mri_libpath', type: 'string', value: '', description: 'Ruby manual lib path')
option('mri_library', type: 'string', value: '', description: 'Ruby manual link name')
option('force32', type: 'boolean', value: false, description: 'Force compiler to build a 32-bit executable')

option('cxx11_experimental', type: 'boolean', value: false, description: 'Toggles between using ghc/filesystem or C++11 <experimental/filesystem>')
option('shared_fluid', type: 'boolean', value: true, description: 'Dynamically link fluidsynth at build time')
option('cjk_fallback_font', type: 'boolean', value: false, description: 'Use WenQuanYi Micro Hei as the fallback font')
option('use_miniffi', type: 'boolean', value: true, description: 'Enable MiniFFI Ruby module (Win32API)')
option('enable-https', type: 'boolean', value: true, description: 'Support HTTPS for get/post requests. Requires OpenSSL.')
option('workdir_current', type: 'boolean', value: false, description: 'Keep current directory on startup')

option('windows_resource_directory', type: 'string', value: 'windows', description: 'Path to Windows EXE resource directory')

option('static_executable', type: 'boolean', value: true, description: 'Build a static executable (Windows-only)')
option('appimagekit_path', type: 'string', value: '', description: 'Path to AppImageTool, used for building AppImages')
option('appimage', type: 'boolean', value: false, description: 'Whether to install to an AppImage or just copy everything')
option('steamworks_path', type: 'string', value: '', description: 'Path to Steamworks SDK')
option('steam_appid', type: 'string', value: '', description: 'Steam AppID. Set this to use SteamAPI_RestartAppIfNecessary')
option('steamshim_debug', type: 'boolean', value: false, description: 'Whether to show Steamshim debug messages in the console')

option('gfx_backend', type: 'combo', value: 'gl', choices: ['gl', 'gles'], description: 'Graphics rendering API to use.')

option('angle', type: 'feature', value: 'auto', description: 'Enable support for using ANGLE to convert OpenGL calls to Direct3D, Metal or Vulkan')
option('angle_direct3d9', type: 'feature', value: 'auto', description: 'Enable ANGLE\'s Direct3D 9 backend')
option('angle_direct3d11', type: 'feature', value: 'auto', description: 'Enable ANGLE\'s Direct3D 11 backend')
option('angle_metal', type: 'feature', value: 'auto', description: 'Enable ANGLE\'s Metal backend')
option('angle_null', type: 'feature', value: 'auto', description: 'Enable ANGLE\'s null backend')
option('angle_vulkan', type: 'feature', value: 'auto', description: 'Enable ANGLE\'s Vulkan backend')

option('default_system', type: 'feature', value: 'disabled', description: 'If this is set to \'enabled\', the system versions of dependencies will be used by default; if this is set to \'disabled\', the vendored versions of dependencies will be used by default; if this is set to \'auto\', by default the system versions of dependencies that exist will be used and the vendored versions will be used otherwise; the dependency resolution behavior of individual dependencies can be overridden by explicitly setting the corresponding options to \'enabled\' or \'disabled\'')

option('spirv_tools_system', type: 'feature', value: 'auto', description: 'Use the system version of SPIR-V Tools instead of the vendored version')
option('volk_system', type: 'feature', value: 'auto', description: 'Use the system version of volk instead of the vendored version')
option('xxhash_system', type: 'feature', value: 'auto', description: 'Use the system version of xxHash instead of the vendored version')
