option('direct3d9', type: 'feature', value: 'auto')
option('direct3d11', type: 'feature', value: 'auto')
option('metal', type: 'feature', value: 'auto')
option('null', type: 'feature', value: 'auto')
option('opengl', type: 'feature', value: 'disabled')
option('vulkan', type: 'feature', value: 'auto')

option('wayland', type: 'feature', value: 'auto')
option('x11', type: 'feature', value: 'auto')

option('frame_capture_disabled', type: 'boolean', value: true)
